jvimalprasathdev/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Mortgage_Property_Greater_Than_10_Acres__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mortgage Property Greater Than 10 Acres</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_recent_W_2_2_years__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W-2 (2 years)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_recent_W_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W-2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>My Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Lead_to_Sofi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>My Lead to Sofi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NMLS__c</fullName>
        <label>NMLS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Lookup__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName &amp; &quot; - &quot; &amp;  ( if( Borrowers_Home_Phone__c != &quot;&quot;, Borrowers_Home_Phone__c, Email ) &amp; &quot; - &quot; )  &amp; Property_State__c</formula>
        <label>Name Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navigate_to_Pipeline__c</fullName>
        <formula>If( Related_Opportunity__c  &lt;&gt; null ,  HYPERLINK(&quot;/&quot;&amp; Related_Opportunity__r.Id ,&quot;Click Here&quot;) &amp; 
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;red&quot;, 15, 15), &quot;&quot; )</formula>
        <label>Navigate to Pipeline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_to_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New to Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Steps_After_Loan_Submission__c</fullName>
        <formula>if((
Pay_stub__c == False &amp;&amp; 
Most_recent_W_2__c == False &amp;&amp; 
Most_recent_W_2_2_years__c == False &amp;&amp; 
Personal_tax_return__c == False &amp;&amp; 
Personal_tax_return_2_years__c == False &amp;&amp;
Business_tax_return__c == False &amp;&amp;
Business_tax_return_2_years__c == False &amp;&amp; 
Social_Security_award_letter__c == false &amp;&amp; 
Pension_Annuity_Statements__c == false &amp;&amp; 
Cancelled_Checks__c == false &amp;&amp;
Bank_Statements__c == false &amp;&amp; 
Stocks_IRA_401k_Statements__c == False &amp;&amp; 
Outstanding_Mortgages__c == False &amp;&amp;
HUD_1_Settlement_Statement__c == false &amp;&amp; 
Intened_use_of_Cash_Out_funds__c == False &amp;&amp; 
Sales_Contract__c == false &amp;&amp; 
Divorce_Separation_decree__c == False &amp;&amp;
Driver_s_License__c == false &amp;&amp; 
Homeowner_s_insurance_policy__c == False &amp;&amp; 
Homeowner_s_Condo_association__c == False &amp;&amp; 
Documentation_of_credit_dispute__c == False &amp;&amp; 
Property_Survey__c == false &amp;&amp; 
Irrevocable_Trust__c == false &amp;&amp; 
RESPA_documents__c == false &amp;&amp; 
ISBLANK(Documents_for_Non_US_Citizens__c) &amp;&amp;
ISBLANK(Statement_s_of_debts__c) &amp;&amp; 
ISBLANK(Other__c)) ,&apos;false&apos;, &apos;true&apos;)</formula>
        <label>Next Steps After Loan Submission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Type__c</fullName>
        <label>Notes Type</label>
        <picklist>
            <picklistValues>
                <fullName>Called Home, Left Message – No Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called Home, Made Contact – Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called Home, No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called Cell, Left Message – No Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called Cell, Made Contact – Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called Cell – No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance Offer Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prequal Letter Sent (Purchase Offer Made)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted – Moved to LOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted – No Longer Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead - assigned to queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead - assigned to user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>This is to capture notes about the lead.</description>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupancy_Code__c</fullName>
        <description>This is to specify the occupancy type of the lead.</description>
        <label>Occupancy Code</label>
        <picklist>
            <picklistValues>
                <fullName>Owner Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Property</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Occupancy_Value__c</fullName>
        <label>Occupancy Value</label>
        <picklist>
            <controllingField>Occupancy_Code__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Purchase_Price__c</fullName>
        <description>This is to specify the original purchase price in dollars.</description>
        <label>Original Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Monthly_Debt__c</fullName>
        <label>Other Monthly Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_Mortgages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outstanding Mortgages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_City__c</fullName>
        <label>Owner City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Country__c</fullName>
        <label>Owner Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Fax__c</fullName>
        <label>Owner Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Postal_code__c</fullName>
        <label>Owner Postal code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_State__c</fullName>
        <label>Owner State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Street__c</fullName>
        <label>Owner Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Owner:User.FirstName &amp; &apos; &apos; &amp;Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_mobile__c</fullName>
        <label>Owner mobile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_stub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pay stub(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pension_Annuity_Statements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pension/Annuity Statements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_tax_return_2_years__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal tax return (2 years)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_tax_return__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal tax return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Search__c</fullName>
        <formula>substitute(substitute(substitute(SUBSTITUTE(Borrowers_Home_Phone__c &amp; &quot;,&quot; &amp; Borrowers_Mobile_Phone__c &amp; &quot;,&quot; &amp; Borrowers_Work_Phone__c &amp; &quot;,&quot; &amp; Co_Borrowers_Home_Phone__c &amp; &quot;,&quot; &amp; Co_Borrowers_Mobile_Phone__c &amp; &quot;,&quot; &amp; Co_Borrowers_Work_Phone__c, &quot;(&quot;, &quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;)</formula>
        <label>Phone Search</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <description>This is to specify the co-borrower’s prefix.</description>
        <label>Prefix</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_HLR_Status__c</fullName>
        <label>Pre HLR Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <description>This is used to specify the preferred contact method of the customer</description>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Home Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method_code__c</fullName>
        <label>Preferred Contact Method code</label>
        <picklist>
            <controllingField>Preferred_Contact_Method__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone_Number__c</fullName>
        <label>Preferred Phone Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Preferences__c</fullName>
        <label>Product Preferences</label>
        <picklist>
            <picklistValues>
                <fullName>5/1 Adjustable Rate Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/1 Adjustable Rate Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 Year Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Year Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FHA 15 Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FHA 30 Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEL 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEL 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEL 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEL 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HELOC 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HELOC 30</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Promotion_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promotion Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Address_1__c</fullName>
        <description>This is to specify the first line of property address.</description>
        <inlineHelpText>This is subject property address.</inlineHelpText>
        <label>Property Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address_2__c</fullName>
        <description>This is to specify the second line of property address.</description>
        <inlineHelpText>This is subject property address.</inlineHelpText>
        <label>Property Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Apt__c</fullName>
        <description>Wipro Work</description>
        <label>Property Apt#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <description>This is to specify property city.</description>
        <inlineHelpText>This is subject property address.</inlineHelpText>
        <label>Property City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Complete_Date__c</fullName>
        <label>Expected Date of Property Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_Country__c</fullName>
        <description>Wipro Work</description>
        <label>Property Country</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_County__c</fullName>
        <description>This is to specify Property County.</description>
        <inlineHelpText>This is subject property address.</inlineHelpText>
        <label>Property County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_House__c</fullName>
        <label>Property House#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Is_A_Planned_Unit_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property Is A Planned Unit Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <description>This is to specify Property State.</description>
        <inlineHelpText>This field is required.</inlineHelpText>
        <label>Property State</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <description>This is to specify the property type of the lead.</description>
        <label>Property Type</label>
        <picklist>
            <picklistValues>
                <fullName>SFR Detached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFR Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-Rise (1-4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Rise (5-8)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High-Rise (9+)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-op</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Townhome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Type_code__c</fullName>
        <label>Property Type code</label>
        <picklist>
            <controllingField>Property_Type__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Zip_Postal_Code__c</fullName>
        <description>This is to specify property zip.</description>
        <inlineHelpText>This is subject property address.</inlineHelpText>
        <label>Property Zip/ Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proprty_lsted_fr_sale_in_last_3months__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Proprty lsted fr sale in last 3months?</description>
        <inlineHelpText>Has the property been listed for sale in the last 3 months</inlineHelpText>
        <label>Proprty lsted fr sale in last 3months?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RB_Branch_Type__c</fullName>
        <label>RB Branch Type</label>
        <picklist>
            <picklistValues>
                <fullName>Neighborhood Lending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centralized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RB_Branch__c</fullName>
        <label>RB Branch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RB_Cost_Center__c</fullName>
        <label>RB Cost Center</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RB_District__c</fullName>
        <label>RB District</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RB_Email__c</fullName>
        <description>Relationship Bankers Email Address</description>
        <inlineHelpText>This is the Relationship Bankers Email Address from RB SOFI</inlineHelpText>
        <label>RB Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RB_First_Name__c</fullName>
        <label>RB  Portal First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RB_Last_Name__c</fullName>
        <label>RB Portal Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RB_NMLS_ID__c</fullName>
        <description>NMLS ID for Relationship Banker</description>
        <label>Banker NMLS ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RB_Referral_FeedBack__c</fullName>
        <label>RB Referral FeedBack</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RB_Region__c</fullName>
        <label>RB Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RESPA_documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RESPA documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate_Loan_type__c</fullName>
        <description>Sprint 6</description>
        <label>Rate Loan type</label>
        <picklist>
            <picklistValues>
                <fullName>Conforming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-confirming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Lock_Expiration_Date__c</fullName>
        <description>To Capture Rate Lock Expiration Date passed from OPUS.</description>
        <label>Rate Lock Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Realtor_Note_After_Closing__c</fullName>
        <formula>IF( ( ISBLANK(Closing_Date__c) ||   ISBLANK(Property_Address_1__c) ), &apos;false&apos;,&apos;true&apos;)</formula>
        <label>Realtor Note After Closing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Id__c</fullName>
        <description>Zillow quote ID</description>
        <label>Ref Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refi_First_Receive_Cash_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <description>&quot;Have you ever refinanced your 1st mortgage and received cash back?&quot;</description>
        <inlineHelpText>&quot;Have you ever refinanced your 1st mortgage and received cash back?&quot;</inlineHelpText>
        <label>Refi&apos;d 1st Mortgage &amp; Received Cash?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_ID__c</fullName>
        <description>sprint 4
wipro</description>
        <label>Region ID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelationShip_Banker_EID__c</fullName>
        <description>sprint 4
wipro</description>
        <label>RelationShip Banker EID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationShip_Banker_Name__c</fullName>
        <description>sprint 4
wipro</description>
        <label>RB SoFi Banker Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Borrower__c</fullName>
        <label>Relationship to Borrower</label>
        <picklist>
            <picklistValues>
                <fullName>Blood Relative, Marriage, or In-Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent Selling to Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of the above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reqd_To_Pay_Home_Owner_s_Asn_Dues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reqd To Pay Home Owner&apos;s Asn Dues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Loan_Amount__c</fullName>
        <description>This is to specify the requested loan amount in dollars.</description>
        <label>Requested Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <description>sprint 4
wipro</description>
        <label>Sales Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salesforce_Lead_Number__c</fullName>
        <displayFormat>L{000000000}</displayFormat>
        <inlineHelpText>This is a auto generated number for each lead in salesforce</inlineHelpText>
        <label>Salesforce Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Segmentation__c</fullName>
        <label>Segmentation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email_RB_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email-RB Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Internal_Referral_mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Internal Referral mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Intro_Mail_to_MC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Intro Mail to MC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Intro_RB_Non_RB_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for sending Intro RB/Non RB email to leads</description>
        <label>Send Intro RB/Non RB Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Purchase_Refinance_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Purchase/Refinance Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_email_to_MC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email to MC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sending_Email_Checker__c</fullName>
        <description>to avoid the Email alert being fired every-time the Lead status is changed we will be updating the picklist value.</description>
        <label>Sending Email Checker</label>
        <picklist>
            <picklistValues>
                <fullName>RB Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non - RB Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shopping_Stage__c</fullName>
        <label>When do you intend to apply?</label>
        <picklist>
            <picklistValues>
                <fullName>1-2 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-4 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-4 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4+ months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Catalyst_ID__c</fullName>
        <label>Direct Portal Site Catalyst ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_award_letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Security award letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>MC book of portfolio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_view__c</fullName>
        <formula>TEXT(Channel_Sources__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_s_of_debts__c</fullName>
        <label>Statement(s) for following debts:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stocks_IRA_401k_Statements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stocks/IRA/401k Statements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <label>Submitted</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>This is to specify the borrower’s suffix</description>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>Jr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>